# sqlalchemy-pydantic-type

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  tests.yml
docs/: index.md
docs/snippets/: links.txt
examples/kitchen-sink/: README.md  pyproject.toml
examples/kitchen-sink/migrations/: env.py
examples/kitchen-sink/migrations/versions/: 1b894531ee3a_init.py  316815d008d1_init.py
examples/kitchen-sink/todo_api/: main.py
examples/type-adapter/: README.md  main.py  pyproject.toml
scripts/: run_tests_docker.sh
src/sqlalchemy_pydantic_type/: __init__.py  core.py
src/sqlalchemy_pydantic_type/alembic/: render_item.py
tests/: __init__.py  conftest.py  test_alembic.py  test_core.py
tests/integration/: test_mysql.py  test_postgres.py  test_sqlite.py
